# Net-Minecraft-Launcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  index.html  preview.html
src/: HttpServer.cpp  HttpServer.h  LauncherCore.cpp  LauncherCore.h  LauncherCore_download.cpp  WebContent.h  main.cpp
